improved card button styling and fixed the offcenter image

--- a/client/src/components/Recipe.css
+++ b/client/src/components/Recipe.css
@@ -8,22 +8,22 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin: 1rem;
 }
 
 .RecipeCard {
   background: white;
   width: 270px;
-  margin: 10px;
-  border-radius: 15px;
+  margin: 1rem;
+  border-radius: 1rem;
 }
 
 .CardImage {
-  height: 18vh;
-  margin-bottom: 15px;
-  background-size: cover;
-  border-radius: 15px 15px 15px 15px;
-  margin-top: 10px;
-  padding-left: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 1rem;
+  width: 80%;
 }
 
 .RecipeCard h3 {
@@ -35,18 +35,40 @@
 }
 
 .RecipeCard a {
-  background-color: black;
+  background-color: #00c9b8;
   color: white;
-  padding: 15px 20px;
+  padding: 8px 20px;
   display: block;
   text-align: center;
-  margin: 20px 50px;
+  cursor: pointer;
+  border-radius: 4px;
+  text-decoration: none;
 }
 
 .RecipeCard:hover {
   background-color: #fe5e54;
   color: white;
-  cursor: pointer;
   transform: scale(1.03);
   transition: all 0.3s ease;
+}
+
+.cardButtonContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flexboxLink {
+width: 6rem;
+}
+
+.flexBtn {
+width: 6rem;
+margin: 1rem;
+margin-bottom: 1rem;
+border-radius: 1rem;
+background-color: var(--primary);
+color: white;
+font-size: 1rem;
+text-align: center;
 }
